# fast-and-feudalist

./: CREDITS.md  Cargo.toml  README.md
assets/shaders/: basic.vert  image.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: actions.rs  colors.rs  drawing.rs  filereader.rs  fonts.rs  gameboard.rs  hardware.rs  images.rs  main.rs  mouse_position.rs  render_gl.rs  resources.rs
src/gameboard/: gameboard.rs  gameboard_drawing.rs  mod.rs
